# Hackpad

./: README.md
CAD/: Hackpad_Arya_CAD.step
Production/: aryapad_v1-NPTH.drl  aryapad_v1-PTH.drl  bottom.step  main.py  top.step
Production/macropad_firmware copy/: README.md
Production/macropad_firmware copy/include/: config.h  encoder.h  matrix.h  oled.h  usb_hid.h
Production/macropad_firmware copy/src/: encoder.c  matrix.c  oled.c  usb_descriptors.c  usb_hid.c
macropad_firmware/: CMakeLists.txt
macropad_firmware/include/: tusb_config.h
macropad_firmware/src/: main.c
